2010-03-04  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/scinrrd_unsqueeze.m:

	- SCINRRD_UNSQUEEZE  Add dummy dimension and convert data to uint8
	data type.

	* Add FileFormatToolbox/scinrrd_load.m:

	- SCINRRD_LOAD Load a NRRD struct saved to Matlab format.

2010-02-26  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/extmat2rotmat.m, PointsToolbox/rotmat2extmat.m:

	- Remove the bottom row of the extended matrix.

2010-02-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/extmat2rotmat.m:

	- EXTMAT2ROTMAT Convert rotation in extended matrix form into
	centroid and matrix pair.

	* Add PointsToolbox/rotmat2extmat.m:

	- ROTMAT2EXTMAT  Convert centroid and rotation matrix pair to
	extended matrix form.

2010-02-22  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/intersect_line_plane.m:

	- INTERSECT_LINE_PLANE Find intersection of a line with a plane.

	* Add FiltersToolbox/scinrrd_box.m:

	- SCINRRD_BOX Compute tight box around SCI NRRD segmentation.

2010-02-20  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_optimal_intersecting_plane.m:

	- Interface change: Change input arguments.

	- Now, instead of intering RAD for smoothing of the segmentation,
	we enter a struct called param, that contains new options for the
	optimisation.

	- Added global optimisation, that is, instead of using fminsearch,
	now you can sweep a whole range of azimuth and elevation angles to
	compute the area values. Because we are optimising only two
	variables, this is not much slower than using fminsearch, and it
	provides a much better insight into the results.

	* PointsToolbox/vec2rotmat.m:

	- Add input argument so that an initial guess for the 2 vectors
	orthogonal to V is provided (as part of an initial guess for the
	rotation matrix). This will constrain the infinite space of
	possible rotations to the closest one to the one we had.
